--- a/ui/package.json
+++ b/ui/package.json
@@ -23,11 +23,12 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-faux-dom": "^4.1.0",
+    "react-fileupload-progress": "^0.4.2",
     "react-leaflet": "^1.8.2",
     "react-leaflet-control": "^1.4.1",
     "react-mapbox-gl": "^3.8.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "^1.1.4",
+    "react-scripts": "^2.1.1",
     "react-vis": "^1.8.3",
     "reactjs-mappletooltip": "^1.4.63",
     "redux": "^3.7.2",
@@ -43,5 +44,11 @@
   },
   "devDependencies": {
     "redux-devtools": "^3.4.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
