--- a/ui/package.json
+++ b/ui/package.json
@@ -4,34 +4,35 @@
   "private": true,
   "homepage": "http://ug.daniels.utoronto.ca/~diasf/Piccard/",
   "dependencies": {
-    "@turf/bbox": "^5.1.5",
-    "@turf/clone": "^5.1.5",
-    "@turf/combine": "^5.1.5",
+    "@turf/bbox": "^6.0.1",
+    "@turf/clone": "^6.0.2",
+    "@turf/combine": "^6.0.1",
     "@turf/dissolve": "^5.1.5",
     "@turf/simplify": "^5.1.5",
-    "chroma-js": "^1.3.6",
-    "d3": "^4.13.0",
+    "chroma-js": "^2.0.3",
+    "d3": "^5.9.1",
     "d3-selection": "^1.3.0",
     "d3-selection-multi": "^1.0.1",
     "es6-promise": "^4.2.4",
-    "gh-pages": "^1.2.0",
+    "gh-pages": "^2.0.1",
     "import": "0.0.6",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.3.1",
     "leaflet.vectorgrid": "^1.3.0",
-    "mapbox-gl": "^0.44.1",
+    "mapbox-gl": "^0.53.0",
+    "npm-check-updates": "^2.15.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-faux-dom": "^4.1.0",
     "react-fileupload-progress": "^0.4.2",
-    "react-leaflet": "^1.8.2",
-    "react-leaflet-control": "^1.4.1",
-    "react-mapbox-gl": "^3.8.0",
-    "react-redux": "^5.0.7",
+    "react-leaflet": "^2.2.1",
+    "react-leaflet-control": "^2.1.1",
+    "react-mapbox-gl": "^4.2.0",
+    "react-redux": "^6.0.1",
     "react-scripts": "^2.1.1",
     "react-vis": "^1.8.3",
     "reactjs-mappletooltip": "^1.4.63",
-    "redux": "^3.7.2",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
@@ -43,6 +44,13 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "eslint-config-google": "^0.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
     "redux-devtools": "^3.4.1"
   },
   "browserslist": [
