detaching geometries from CT/year

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,7 +1,24 @@
 all: US
 	python3 srv.py conf.json
 
-US: ./US/basegraph.gp
-	
-./US/basegraph.gp: genBasegraph.py ./data/US_tract_1970.shp ./data/US_tract_1980.shp ./data/US_tract_1990.shp ./data/US_tract_2000.shp ./data/US_tract_2010.shp
-	python3 genBasegraph.py GISJOIN ./US/basegraph.gp 1970 ./data/US_tract_1970.shp 1980 ./data/US_tract_1980.shp 1990 ./data/US_tract_1990.shp 2000 ./data/US_tract_2000.shp 2010 ./data/US_tract_2010.shp
+US: BASE_US CROSS_US
+
+CROSS_US: ./data/US_tract_1970.shp ./data/US_tract_1980.shp ./data/US_tract_1990.shp ./data/US_tract_2000.shp ./data/US_tract_2010.shp
+	python3 crossGeometryConnections.py ./data/US/ \
+	GISJOIN US_CT_1970 ./data/US_tract_1970.shp  \
+	GISJOIN US_CT_1980 ./data/US_tract_1980.shp \
+	GISJOIN US_CT_1990 ./data/US_tract_1990.shp \
+	GISJOIN US_CT_2000 ./data/US_tract_2000.shp \
+	GISJOIN US_CT_2010 ./data/US_tract_2010.shp
+
+BASE_US: ./US/US_CT_1970.gp ./US/US_CT_1980.gp ./US/US_CT_1990.gp ./US/US_CT_2000.gp ./US/US_CT_2010.gp
+./US/US_CT_1970.gp: genBasegraph.py ./data/US_tract_1970.shp 
+	python3 genBasegraph.py GISJOIN ./US/US_CT_1970.gp US_CT_1970 ./data/US_tract_1970.shp
+./US/US_CT_1980.gp: genBasegraph.py ./data/US_tract_1980.shp 
+	python3 genBasegraph.py GISJOIN ./US/US_CT_1980.gp US_CT_1980 ./data/US_tract_1980.shp
+./US/US_CT_1990.gp: genBasegraph.py ./data/US_tract_1990.shp 
+	python3 genBasegraph.py GISJOIN ./US/US_CT_1990.gp US_CT_1990 ./data/US_tract_1990.shp
+./US/US_CT_2000.gp: genBasegraph.py ./data/US_tract_2000.shp 
+	python3 genBasegraph.py GISJOIN ./US/US_CT_2000.gp US_CT_2000 ./data/US_tract_2000.shp
+./US/US_CT_2010.gp: genBasegraph.py ./data/US_tract_2010.shp 
+	python3 genBasegraph.py GISJOIN ./US/US_CT_2010.gp US_CT_2010 ./data/US_tract_2010.shp
