--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,15 +1,10 @@
 all: US
 	python3 srv.py conf.json
 
-US: BASE_US CROSS_US
+US: BASE_US ./US/cross.done
 
-CROSS_US: ./data/US_tract_1970.shp ./data/US_tract_1980.shp ./data/US_tract_1990.shp ./data/US_tract_2000.shp ./data/US_tract_2010.shp
-	python3 crossGeometryConnections.py ./data/US/ \
-	GISJOIN US_CT_1970 ./data/US_tract_1970.shp  \
-	GISJOIN US_CT_1980 ./data/US_tract_1980.shp \
-	GISJOIN US_CT_1990 ./data/US_tract_1990.shp \
-	GISJOIN US_CT_2000 ./data/US_tract_2000.shp \
-	GISJOIN US_CT_2010 ./data/US_tract_2010.shp
+./US/cross.done: ./data/US_tract_1970.shp ./data/US_tract_1980.shp ./data/US_tract_1990.shp ./data/US_tract_2000.shp ./data/US_tract_2010.shp
+	python3 crossGeometryConnections.py ./US/ GISJOIN US_CT_1970 ./data/US_tract_1970.shp GISJOIN US_CT_1980 ./data/US_tract_1980.shp GISJOIN US_CT_1990 ./data/US_tract_1990.shp GISJOIN US_CT_2000 ./data/US_tract_2000.shp GISJOIN US_CT_2010 ./data/US_tract_2010.shp
 
 BASE_US: ./US/US_CT_1970.gp ./US/US_CT_1980.gp ./US/US_CT_1990.gp ./US/US_CT_2000.gp ./US/US_CT_2010.gp
 ./US/US_CT_1970.gp: genBasegraph.py ./data/US_tract_1970.shp 
