--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "leaflet.vectorgrid": "^1.3.0",
     "mapbox-gl": "^0.53.1",
     "npm-check-updates": "^2.15.0",
+    "randomcolor": "^0.5.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-faux-dom": "^4.5.0",
