Done remaking the base (no country, just geometries) Basic navigation on the aspects

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,20 +1,20 @@
 all: US
 	python3 srv.py conf.json
 
-US: BASE_US ./US/cross.done
+US: BASE_US ./db/cross.done
 
-./US/cross.done: crossGeometryConnections.py ./data/US_tract_1970.shp ./data/US_tract_1980.shp ./data/US_tract_1990.shp ./data/US_tract_2000.shp ./data/US_tract_2010.shp
-	python3 crossGeometryConnections.py ./US/ GISJOIN US_CT_1970 ./data/US_tract_1970.shp GISJOIN US_CT_1980 ./data/US_tract_1980.shp GISJOIN US_CT_1990 ./data/US_tract_1990.shp GISJOIN US_CT_2000 ./data/US_tract_2000.shp GISJOIN US_CT_2010 ./data/US_tract_2010.shp
+./db/cross.done: crossGeometryConnections.py ./shapefiles/US_tract_1970.shp ./shapefiles/US_tract_1980.shp ./shapefiles/US_tract_1990.shp ./shapefiles/US_tract_2000.shp ./shapefiles/US_tract_2010.shp
+	python3 crossGeometryConnections.py ./US/ GISJOIN US_CT_1970 ./shapefiles/US_tract_1970.shp GISJOIN US_CT_1980 ./shapefiles/US_tract_1980.shp GISJOIN US_CT_1990 ./shapefiles/US_tract_1990.shp GISJOIN US_CT_2000 ./shapefiles/US_tract_2000.shp GISJOIN US_CT_2010 ./shapefiles/US_tract_2010.shp
 
-BASE_US: ./US/US_CT_1970.gp ./US/US_CT_1980.gp ./US/US_CT_1990.gp ./US/US_CT_2000.gp ./US/US_CT_2010.gp
+BASE_US: ./db/US_CT_1970.gp ./db/US_CT_1980.gp ./db/US_CT_1990.gp ./db/US_CT_2000.gp ./db/US_CT_2010.gp
 
-./US/US_CT_1970.gp: genBasegraph.py ./data/US_tract_1970.shp 
-	python3 genBasegraph.py GISJOIN ./US/US_CT_1970.gp US_CT_1970 ./data/US_tract_1970.shp
-./US/US_CT_1980.gp: genBasegraph.py ./data/US_tract_1980.shp 
-	python3 genBasegraph.py GISJOIN ./US/US_CT_1980.gp US_CT_1980 ./data/US_tract_1980.shp
-./US/US_CT_1990.gp: genBasegraph.py ./data/US_tract_1990.shp 
-	python3 genBasegraph.py GISJOIN ./US/US_CT_1990.gp US_CT_1990 ./data/US_tract_1990.shp
-./US/US_CT_2000.gp: genBasegraph.py ./data/US_tract_2000.shp 
-	python3 genBasegraph.py GISJOIN ./US/US_CT_2000.gp US_CT_2000 ./data/US_tract_2000.shp
-./US/US_CT_2010.gp: genBasegraph.py ./data/US_tract_2010.shp 
-	python3 genBasegraph.py GISJOIN ./US/US_CT_2010.gp US_CT_2010 ./data/US_tract_2010.shp
+./db/US_CT_1970.gp: genBasegraph.py ./shapefiles/US_tract_1970.shp 
+	python3 genBasegraph.py GISJOIN ./db/US_CT_1970.gp US_CT_1970 ./shapefiles/US_tract_1970.shp
+./db/US_CT_1980.gp: genBasegraph.py ./shapefiles/US_tract_1980.shp 
+	python3 genBasegraph.py GISJOIN ./db/US_CT_1980.gp US_CT_1980 ./shapefiles/US_tract_1980.shp
+./db/US_CT_1990.gp: genBasegraph.py ./shapefiles/US_tract_1990.shp 
+	python3 genBasegraph.py GISJOIN ./db/US_CT_1990.gp US_CT_1990 ./shapefiles/US_tract_1990.shp
+./db/US_CT_2000.gp: genBasegraph.py ./shapefiles/US_tract_2000.shp 
+	python3 genBasegraph.py GISJOIN ./db/US_CT_2000.gp US_CT_2000 ./shapefiles/US_tract_2000.shp
+./db/US_CT_2010.gp: genBasegraph.py ./shapefiles/US_tract_2010.shp 
+	python3 genBasegraph.py GISJOIN ./db/US_CT_2010.gp US_CT_2010 ./shapefiles/US_tract_2010.shp
