--- a/ui/package.json
+++ b/ui/package.json
@@ -9,28 +9,29 @@
     "@turf/combine": "^6.0.1",
     "@turf/dissolve": "^5.1.5",
     "@turf/simplify": "^5.1.5",
-    "chroma-js": "^2.0.3",
-    "d3": "^5.9.2",
+    "chroma-js": "^2.0.4",
+    "d3": "^5.9.5",
     "d3-selection": "^1.3.0",
     "d3-selection-multi": "^1.0.1",
-    "es6-promise": "^4.2.4",
+    "es6-promise": "^4.2.8",
+    "eslint-config-node": "^4.0.0",
     "gh-pages": "^2.0.1",
     "import": "0.0.6",
     "isomorphic-fetch": "^2.2.1",
-    "leaflet": "^1.3.1",
+    "leaflet": "^1.5.1",
     "leaflet.vectorgrid": "^1.3.0",
-    "mapbox-gl": "^0.53.1",
-    "npm-check-updates": "^2.15.0",
+    "mapbox-gl": "^1.0.0",
+    "npm-check-updates": "^3.1.12",
     "randomcolor": "^0.5.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-faux-dom": "^4.5.0",
-    "react-fileupload-progress": "^0.4.2",
-    "react-leaflet": "^2.2.1",
+    "react-fileupload-progress": "^0.5.0",
+    "react-leaflet": "^2.4.0",
     "react-leaflet-control": "^2.1.1",
-    "react-mapbox-gl": "^4.3.0",
-    "react-redux": "^6.0.1",
-    "react-scripts": "^2.1.8",
+    "react-mapbox-gl": "^4.4.0",
+    "react-redux": "^7.1.0",
+    "react-scripts": "^3.0.1",
     "react-vis": "^1.11.7",
     "reactjs-mappletooltip": "^1.4.63",
     "redux": "^4.0.1",
@@ -45,12 +46,12 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "eslint-config-google": "^0.12.0",
+    "eslint-config-google": "^0.13.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-standard": "^4.0.0",
     "redux-devtools": "^3.4.1"
   },
